# RetailStoreScraper

./: .gitignore  README.md  main.py  pyproject.toml
src/application/: service.py
src/domain/: entities.py  scraper_factory.py  scraper_strategy.py  workflows.py
src/infrastructure/config/: config.py
src/infrastructure/presisitence/: aws_repo.py
src/infrastructure/scraping/iga/: config.py  full.py  iga.py  update.py
src/infrastructure/scraping/loblaw/: config.py  full.py  loblaw.py  update.py
src/infrastructure/scraping/metro/: config.py  full.py  metro.py  update.py
src/infrastructure/scraping/walmart/: config.py  full.py  update.py  walmart.py
src/presentation/: cli.py
